// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`passage-ref widget should render with invalid reference 1`] = `
<div>
  <div
    class="perseus-renderer perseus-renderer-responsive"
  >
    <div
      class="paragraph"
      data-perseus-paragraph-index="0"
    >
      <div
        class="paragraph"
      >
        <div
          class="perseus-widget-container widget-nohighlight widget-block"
        >
          <div>
            <div
              class="perseus-widget-passage-container"
            >
              <div
                class="perseus-widget-passage-instructions"
              >
                

              </div>
              <div
                class="perseus-widget-passage"
              >
                <h3
                  class="perseus-sr-only"
                >
                  Beginning of reading passage.
                </h3>
                <div
                  class="passage-text"
                >
                  <div
                    class="container_6htn2u"
                  >
                    <div>
                      <div>
                        <div>
                          <div />
                        </div>
                      </div>
                    </div>
                    <div
                      class="content_gor68n"
                    >
                      <div>
                        <div>
                          <div
                            aria-hidden="true"
                            class="measurer_225hir"
                          >
                            <div
                              class="paragraph"
                            >
                              Line Height Measurement
                            </div>
                          </div>
                          <div
                            class="paragraph"
                          >
                            <span>
                              Our electronic devices are keeping us awake—not just because we spend time using them when we should be sleeping
                            </span>
                            <span>
                              , but also because they emit a blue light that keeps our brains awake
                            </span>
                            <span>
                              . One study showed that people who used screens that emitted blue light were unable to produce sufficient melatonin
                            </span>
                            <span>
                              , a hormone that 
                            </span>
                            <span
                              style="display: inline-block; width: 0px; visibility: hidden;"
                            >
                              _
                            </span>
                            <span>
                              promotes
                            </span>
                            <span
                              style="display: inline-block; width: 0px; visibility: hidden;"
                            >
                              _
                            </span>
                            <span>
                               sleep
                            </span>
                            <span>
                              . In order to enjoy a more restful night
                            </span>
                            <span>
                              , experts recommend shutting off screens at least two hours before bed
                            </span>
                            <span>
                              . 
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="perseus-sr-only"
                >
                  End of reading passage.
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="paragraph"
      data-perseus-paragraph-index="1"
    >
      <div
        class="paragraph"
      >
        We can see the word “promotes” is used in 
        <div
          class="perseus-widget-container widget-nohighlight widget-inline"
        >
          <span>
            lines ?–?
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`passage-ref widget should render with multi-line reference 1`] = `
<div>
  <div
    class="perseus-renderer perseus-renderer-responsive"
  >
    <div
      class="paragraph"
      data-perseus-paragraph-index="0"
    >
      <div
        class="paragraph"
      >
        <div
          class="perseus-widget-container widget-nohighlight widget-block"
        >
          <div>
            <div
              class="perseus-widget-passage-container"
            >
              <div
                class="perseus-widget-passage-instructions"
              >
                

              </div>
              <div
                class="perseus-widget-passage"
              >
                <h3
                  class="perseus-sr-only"
                >
                  Beginning of reading passage.
                </h3>
                <div
                  class="passage-text"
                >
                  <div
                    class="container_6htn2u"
                  >
                    <div>
                      <div>
                        <div>
                          <div />
                        </div>
                      </div>
                    </div>
                    <div
                      class="content_gor68n"
                    >
                      <div>
                        <div>
                          <div
                            aria-hidden="true"
                            class="measurer_225hir"
                          >
                            <div
                              class="paragraph"
                            >
                              Line Height Measurement
                            </div>
                          </div>
                          <div
                            class="paragraph"
                          >
                            <span>
                              Our electronic devices are keeping us awake—not just because we spend time using them when we should be sleeping
                            </span>
                            <span>
                              , but also because they emit a blue light that keeps our brains awake
                            </span>
                            <span>
                              . One study showed that people who used screens that emitted blue light were unable to produce sufficient melatonin
                            </span>
                            <span>
                              , a hormone that 
                            </span>
                            <span
                              style="display: inline-block; width: 0px; visibility: hidden;"
                            >
                              _
                            </span>
                            <span>
                              promotes
                            </span>
                            <span
                              style="display: inline-block; width: 0px; visibility: hidden;"
                            >
                              _
                            </span>
                            <span>
                               sleep
                            </span>
                            <span>
                              . In order to enjoy a more restful night
                            </span>
                            <span>
                              , experts recommend shutting off screens at least two hours before bed
                            </span>
                            <span>
                              . 
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="perseus-sr-only"
                >
                  End of reading passage.
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="paragraph"
      data-perseus-paragraph-index="1"
    >
      <div
        class="paragraph"
      >
        We can see the word “promotes” is used in 
        <div
          class="perseus-widget-container widget-nohighlight widget-inline"
        >
          <span>
            lines 4–6
            <div
              class="perseus-sr-only"
            >
              mocked reference content
            </div>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`passage-ref widget should render with single-line reference 1`] = `
<div>
  <div
    class="perseus-renderer perseus-renderer-responsive"
  >
    <div
      class="paragraph"
      data-perseus-paragraph-index="0"
    >
      <div
        class="paragraph"
      >
        <div
          class="perseus-widget-container widget-nohighlight widget-block"
        >
          <div>
            <div
              class="perseus-widget-passage-container"
            >
              <div
                class="perseus-widget-passage-instructions"
              >
                

              </div>
              <div
                class="perseus-widget-passage"
              >
                <h3
                  class="perseus-sr-only"
                >
                  Beginning of reading passage.
                </h3>
                <div
                  class="passage-text"
                >
                  <div
                    class="container_6htn2u"
                  >
                    <div>
                      <div>
                        <div>
                          <div />
                        </div>
                      </div>
                    </div>
                    <div
                      class="content_gor68n"
                    >
                      <div>
                        <div>
                          <div
                            aria-hidden="true"
                            class="measurer_225hir"
                          >
                            <div
                              class="paragraph"
                            >
                              Line Height Measurement
                            </div>
                          </div>
                          <div
                            class="paragraph"
                          >
                            <span>
                              Our electronic devices are keeping us awake—not just because we spend time using them when we should be sleeping
                            </span>
                            <span>
                              , but also because they emit a blue light that keeps our brains awake
                            </span>
                            <span>
                              . One study showed that people who used screens that emitted blue light were unable to produce sufficient melatonin
                            </span>
                            <span>
                              , a hormone that 
                            </span>
                            <span
                              style="display: inline-block; width: 0px; visibility: hidden;"
                            >
                              _
                            </span>
                            <span>
                              promotes
                            </span>
                            <span
                              style="display: inline-block; width: 0px; visibility: hidden;"
                            >
                              _
                            </span>
                            <span>
                               sleep
                            </span>
                            <span>
                              . In order to enjoy a more restful night
                            </span>
                            <span>
                              , experts recommend shutting off screens at least two hours before bed
                            </span>
                            <span>
                              . 
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="perseus-sr-only"
                >
                  End of reading passage.
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="paragraph"
      data-perseus-paragraph-index="1"
    >
      <div
        class="paragraph"
      >
        We can see the word “promotes” is used in 
        <div
          class="perseus-widget-container widget-nohighlight widget-inline"
        >
          <span>
            line 4
            <div
              class="perseus-sr-only"
            >
              mocked reference content
            </div>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
